# extractosm

./: .gitignore  Makefile  README.md  example.ipynb  pyproject.toml
extractosm/: pois.py  transit.py  utils.py
